# lib/procesos/api/lecciones/leccion_get_all.js
@@ -30,16 +30,24 @@ module.exports = class extends BaseLeccion{
 
   __formatearLecciones(){
 
-    this.ll.forEach((l) => {
+    let salida = this.ll.map((l) => {
+        return {
+          nombre: l.nombre,
+          orden: l.orden
+        }
+    })
 
-      this.producto().push({
 
-        nombre: l.nombre,
-        orden: l.orden
+    if(this.sys("__subproceso__")){
+  
+      this.resultado("lecciones", salida);
 
-      })
+    }
+    else{
 
-    })    
+      this.asignarProducto(salida);
+    }
 
   }
+
 }
